--- a/locales/en.json
+++ b/locales/en.json
@@ -3,5 +3,6 @@
     "teleport_success": "Succefully teleported to last position.",
     "no_marker": "You did not set any marker!",
     "command_tpm": "%s Teleport to marker",
-    "command_noclip": "%s Toggle noclip mode"
+    "command_noclip": "%s Toggle noclip mode",
+    "command_openui": "%s Open Dolu Mapping Tool"
 }
