chore(locales): more locales

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,11 +1,24 @@
 {
-  "cannot_goback": "Aucune position récente trouvée. Vous devez d'abord vous téléporter.",
-  "teleport_success": "Téléporté avec succès à la dernière position.",
-  "no_marker": "Vous n'avez défini aucun marqueur!",
+  "cannot_goback": "Aucune position récente trouvée. Vous devez d'abord vous téléporter",
+  "no_marker": "Vous n'avez défini aucun marqueur",
   "command_tpm": "%s Se téléporter au marqueur",
   "command_noclip": "%s Toggle Noclip",
   "command_openui": "%s Ouvrir Dolu Tool",
-  "command_weather_notfound": "Vous essayer d'appliquer une météo qui n'existe pas: %s",
+  "command_weather_notfound": "Vous essayez d'appliquer une météo qui n'existe pas: %s",
+  "teleport_invalid_coords": "Vous essayez de vous téléporter sur des coords invalides",
+  "model_doesnt_exist": "Le model %s n'existe pas",
+  "copied_coords_clipboard": "Coordonnées copiée dans le presse-papier",
+  "press_escape_exit": "Appuyer sur 'Echap' pour sortir du mode d'édition",
+  "custom_location_created": "Posiiton custom sauvegardée",
+  "vehicle_upgraded": "Véhicule amélioré",
+  "weapon_gave": "Vous avez reçu une arme",
+  "weapon_cant_carry": "Vous ne pouvez pas porter cette arme",
+  "max_health_set": "Votre vie a été restaurée",
+  "entity_cant_be_loaded": "L'entité n'a pas pu être chargée...",
+  "entity_doesnt_exist": "L'entité/model n'existe pas",
+  "entity_deleted": "Entité supprimée",
+  "teleport_success": "Téléportation effectuée. Utilisez '/goback' pour revenir à la dernière position",
+  "ui_exit": "Quitter",
   "ui_copy_coords": "Copier coords",
   "ui_copied_coords": "Coords copiées",
   "ui_copy_name": "Copier nom",
@@ -18,8 +31,8 @@
   "ui_interior_id": "ID de l'intérieur",
   "ui_current_room": "Room actuelle",
   "ui_teleport": "Téléporter",
-  "ui_not_in_interior": "Vous n'êtes pas dans un intérieur.",
-  "ui_no_last_location": "Vous ne vous êtes pas encore téléporté.",
+  "ui_not_in_interior": "Vous n'êtes pas dans un intérieur",
+  "ui_no_last_location": "Vous ne vous êtes pas encore téléporté",
   "ui_current_coords": "Coords actuelles",
   "ui_set_coords": "Appliquer coords",
   "ui_save_location": "Sauver la position",
@@ -41,7 +54,7 @@
   "ui_freeze_time": "Figer l'heure",
   "ui_weather": "Météo",
   "ui_choose_weather": "Choisissez la météo que vous souhaitez",
-  "ui_current_weather": "Météo actuelle?",
+  "ui_current_weather": "Météo actuelle ?",
   "ui_freeze_weather": "Figer la météo",
   "ui_interior": "Interieur actuel",
   "ui_room_count": "Nombre de room",
@@ -56,6 +69,7 @@
   "ui_room_to": "Vers la room",
   "ui_index": "Index",
   "ui_timecycle": "Timecycle",
+  "ui_no_timecycle_found": "Aucun timecycle trouvé",
   "ui_object_spawner": "Spawner d'objet",
   "ui_locations": "Positions",
   "ui_snap_to_ground": "Plaquer au sol",
@@ -88,7 +102,22 @@
   "ui_cancel": "Annuler",
   "ui_location_name": "Nom de la position",
   "ui_create_location_description": "Sauvegarder vos coordonnées et heading actuels",
-  "ui_add_entity": "Ajouter une nouvelle entitée",
+  "ui_add_entity": "Ajouter une nouvelle entité",
   "ui_add_entity_description": "Entrer le nom du model",
-  "ui_delete_all_entities": "Supprimé tout les objets ajoutés?"
+  "ui_delete_all_entities": "Supprimer tout les objets ajoutés ?",
+  "ui_amount": "Quantité",
+  "ui_portal_flag_1": "Désactive le rendu extérieur",
+  "ui_portal_flag_2": "Désactive le rendu intérieur",
+  "ui_portal_flag_4": "Miroir",
+  "ui_portal_flag_8": "Extra luminosité",
+  "ui_portal_flag_16": "Inconnu 16",
+  "ui_portal_flag_32": "Utilise les LOD à l'exterieur",
+  "ui_portal_flag_64": "Désactive le portail quand la porte est fermée",
+  "ui_portal_flag_128": "Inconnu 128",
+  "ui_portal_flag_256": "Active les portails exterieurs dans le mirroir",
+  "ui_portal_flag_512": "Inconnu 512",
+  "ui_portal_flag_1024": "Active les entités du limbo dans le mirroir",
+  "ui_portal_flag_2048": "Inconnu 2048",
+  "ui_portal_flag_4096": "Inconnu 4096",
+  "ui_portal_flag_8192": "Désactive le 'farclipping'"
 }
