--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,24 @@
 {
-  "cannot_goback": "No last location found. You need to teleport somewhere first.",
-  "teleport_success": "Succefully teleported to last position.",
-  "no_marker": "You did not set any marker!",
+  "cannot_goback": "No last location found. You need to teleport somewhere first",
+  "no_marker": "You did not set any marker",
   "command_tpm": "%s Teleport to marker",
   "command_noclip": "%s Toggle noclip",
   "command_openui": "%s Open Dolu Tool",
   "command_weather_notfound": "Trying to set an invalid weather type: %s",
+  "teleport_invalid_coords": "Trying to teleport player to invalid coords type",
+  "model_doesnt_exist": "Model %s does not exists",
+  "copied_coords_clipboard": "Coords copied to clipboard",
+  "press_escape_exit": "Press 'Escape' to exit edit mode",
+  "custom_location_created": "Custom location succefully created",
+  "vehicle_upgraded": "Vehicle succefully upgraded!",
+  "weapon_gave": "You just receive a weapon",
+  "weapon_cant_carry": "You cannot receive this weapon",
+  "max_health_set": "Max health succefully set",
+  "entity_cant_be_loaded": "The entity cannot be loaded...",
+  "entity_doesnt_exist": "Entity does not exist",
+  "entity_deleted": "Entity succefully deleted",
+  "teleport_success": "Succefully teleported. Use /goback to go back to last location",
+  "ui_exit": "Exit",
   "ui_copy_coords": "Copy coords",
   "ui_copied_coords": "Copied coords",
   "ui_copy_name": "Copy name",
@@ -18,8 +31,8 @@
   "ui_interior_id": "Interior ID",
   "ui_current_room": "Current Room",
   "ui_teleport": "Teleport",
-  "ui_not_in_interior": "You are not inside any interior.",
-  "ui_no_last_location": "You did not teleport to any location yet.",
+  "ui_not_in_interior": "You are not inside any interior",
+  "ui_no_last_location": "You did not teleport to any location yet",
   "ui_current_coords": "Current Coords",
   "ui_set_coords": "Set coords",
   "ui_save_location": "Save as location",
@@ -56,11 +69,12 @@
   "ui_room_to": "Room to",
   "ui_index": "Index",
   "ui_timecycle": "Timecycle",
+  "ui_no_timecycle_found": "No timecycle found",
   "ui_object_spawner": "Object Spawner",
   "ui_locations": "Locations",
   "ui_snap_to_ground": "Snap to ground",
   "ui_duplicate": "Duplicate",
-  "ui_no_location_found": "No location found.",
+  "ui_no_location_found": "No location found",
   "ui_goto": "Go to",
   "ui_show_custom_locations": "Show custom locations",
   "ui_show_vanilla_locations": "Show vanilla locations",
@@ -90,5 +104,20 @@
   "ui_create_location_description": "Will save your current coords and heading",
   "ui_add_entity": "Add a new entity",
   "ui_add_entity_description": "Enter the name of the entity",
-  "ui_delete_all_entities": "Delete all spawned entities ?"
+  "ui_delete_all_entities": "Delete all spawned entities?",
+  "ui_amount": "Amount",
+  "ui_portal_flag_1": "Disables exterior rendering",
+  "ui_portal_flag_2": "Disables interior rendering",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Extra bloom",
+  "ui_portal_flag_16": "Unknown 16",
+  "ui_portal_flag_32": "Use exterior LOD",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Unknown 128",
+  "ui_portal_flag_256": "Mirror exterior portals",
+  "ui_portal_flag_512": "Unknown 512",
+  "ui_portal_flag_1024": "Mirror limbo entities",
+  "ui_portal_flag_2048": "Unknown 2048",
+  "ui_portal_flag_4096": "Unknown 4096",
+  "ui_portal_flag_8192": "Disable farclipping"
 }
