chore(locales): add missing locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,8 @@
   "entity_doesnt_exist": "Entity does not exist",
   "entity_deleted": "Entity succefully deleted",
   "teleport_success": "Succefully teleported. Use /goback to go back to last location",
+  "ui_home": "Home",
+  "ui_world": "World",
   "ui_exit": "Exit",
   "ui_copy_coords": "Copy coords",
   "ui_copied_coords": "Copied coords",
@@ -28,6 +30,7 @@
   "ui_name": "Name",
   "ui_hash": "Hash",
   "ui_coords": "Coords",
+  "ui_heading": "Direction",
   "ui_interior_id": "Interior ID",
   "ui_current_room": "Current Room",
   "ui_teleport": "Teleport",
