--- a/locales/fr.json
+++ b/locales/fr.json
@@ -18,6 +18,8 @@
   "entity_doesnt_exist": "L'entité/model n'existe pas",
   "entity_deleted": "Entité supprimée",
   "teleport_success": "Téléportation effectuée. Utilisez '/goback' pour revenir à la dernière position",
+  "ui_home": "Accueil",
+  "ui_world": "Environnement",
   "ui_exit": "Quitter",
   "ui_copy_coords": "Copier coords",
   "ui_copied_coords": "Coords copiées",
@@ -28,6 +30,7 @@
   "ui_name": "Nom",
   "ui_hash": "Hash",
   "ui_coords": "Coords",
+  "ui_heading": "Direction",
   "ui_interior_id": "ID de l'intérieur",
   "ui_current_room": "Room actuelle",
   "ui_teleport": "Téléporter",
@@ -92,7 +95,7 @@
   "ui_spawn": "Spawn",
   "ui_spawn_by_name": "Spawn par nom",
   "ui_no_vehicle_found": "Aucun véhicule trouvé",
-  "ui_weapons": "Weapons",
+  "ui_weapons": "Armes",
   "ui_give_weapon_by_name": "Donner l'arme par nom",
   "ui_give_weapon": "Donner l'arme",
   "ui_no_weapon_found": "Aucune arme trouvée",
