--- a/locales/fr.json
+++ b/locales/fr.json
@@ -40,7 +40,7 @@
   "ui_set_coords": "Appliquer coords",
   "ui_save_location": "Sauver la position",
   "ui_last_location": "Dernière Position",
-  "ui_current_interior": "Interieur actuel",
+  "ui_current_interior": "Intérieur actuel",
   "ui_quick_actions": "Actions Rapides",
   "ui_clean_zone": "Nettoyer la zone",
   "ui_clean_ped": "Nettoyer le ped",
@@ -59,7 +59,7 @@
   "ui_choose_weather": "Choisissez la météo que vous souhaitez",
   "ui_current_weather": "Météo actuelle ?",
   "ui_freeze_weather": "Figer la météo",
-  "ui_interior": "Interieur actuel",
+  "ui_interior": "Intérieur",
   "ui_room_count": "Nombre de room",
   "ui_portal_count": "Nombre de portails",
   "ui_portals": "Portails",
@@ -125,5 +125,16 @@
   "ui_portal_flag_8192": "Désactive le 'farclipping'",
   "ui_update_warning": "Mise à jour disponible !",
   "ui_github": "Ouvrir le dépot Github",
-  "ui_discord": "Rejoindre le discord de Dolu"
+  "ui_discord": "Rejoindre le discord de Dolu",
+  "ui_audio": "Audio",
+  "ui_static_emitters": "Static Emitters",
+  "ui_draw_static_emitters": "Afficher les static emitters",
+  "ui_draw_distance": "Distance d'affichage",
+  "ui_closest_emitter_info": "Emitter le plus proche",
+  "ui_refresh": "Rafraichir",
+  "ui_distance": "Distance",
+  "ui_meters": "mètres",
+  "ui_flags": "Flags",
+  "ui_room": "Room",
+  "ui_radio_station": "Station de radio"
 }
