--- a/locales/cs.json
+++ b/locales/cs.json
@@ -59,7 +59,7 @@
   "ui_choose_weather": "Vyber typ počasí",
   "ui_current_weather": "Aktuální počasí?",
   "ui_freeze_weather": "Zmrazit počasí",
-  "ui_interior": "Aktuální interiér",
+  "ui_interior": "Interiér",
   "ui_room_count": "Počet roomů",
   "ui_portal_count": "Počet portálů",
   "ui_portals": "Portály",
@@ -125,5 +125,16 @@
   "ui_portal_flag_8192": "Vypnout farclipping",
   "ui_update_warning": "Aktualizace k dispozici!",
   "ui_github": "Otevřít GitHub repozitář",
-  "ui_discord": "Otevřít Dolu Discord"
+  "ui_discord": "Otevřít Dolu Discord",
+  "ui_audio": "Audio",
+  "ui_static_emitters": "Static Emitters",
+  "ui_draw_static_emitters": "Show static emitters",
+  "ui_draw_distance": "Draw Distance",
+  "ui_closest_emitter_info": "Closest Emitter Info",
+  "ui_refresh": "Refresh",
+  "ui_distance": "Distance",
+  "ui_meters": "meters",
+  "ui_flags": "Flags",
+  "ui_room": "Room",
+  "ui_radio_station": "Radio Station"
 }
