chore(locale): update cs locales (by Smokey)

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1,140 +1,140 @@
 {
-  "cannot_goback": "Nenalezena žádná poslední lokace. Musíš se nejdříve někde teleportovat.",
-  "no_marker": "Neoznačil jsi žádné místo",
-  "command_tpm": "%s Teleport na označené místo",
-  "command_noclip": "%s Přepnout noclip",
-  "command_openui": "%s Otevřít Dolu Tool",
-  "command_weather_notfound": "Pokus o nastavení neplatného typu počasí: %s",
-  "teleport_invalid_coords": "Pokus o teleport hráče na neplatný typ souřadnic",
-  "model_doesnt_exist": "Model %s neexistuje",
-  "copied_coords_clipboard": "Souřadnice zkopírovány do schránky",
-  "press_escape_exit": "Zmáčkni 'Escape' pro ukončení 'edit' módu",
-  "custom_location_created": "Vlastní lokace úspěšně vytvořena",
-  "vehicle_upgraded": "Vozidlo úspěšně vylepšeno!",
-  "weapon_gave": "Obdržel jsi zbraň",
-  "weapon_cant_carry": "Nelze obdržet tuto zbraň",
-  "max_health_set": "Maximální zdraví úspěšně nastaveno",
-  "entity_cant_be_loaded": "Tato entita nemůže být načtena...",
-  "entity_doesnt_exist": "Entita neexistuje",
-  "entity_deleted": "Entita úspěšně smazána",
-  "teleport_success": "Úspěšně teleportován. Použij /goback pro teleport na poslední lokaci",
-  "ui_home": "Domů",
-  "ui_world": "Svět",
-  "ui_exit": "Ukončit",
-  "ui_copy_coords": "Zkopír. souřadnice",
-  "ui_copied_coords": "Souřadnice zkopírovány",
-  "ui_copy_name": "Zkopír. název",
-  "ui_copied_name": "Název zkopírován",
-  "ui_copy_hash": "Zkopír. hash",
-  "ui_copied_hash": "Hash zkopírován",
-  "ui_name": "Název",
-  "ui_hash": "Hash",
-  "ui_coords": "Souřadnice",
-  "ui_heading": "Hlavička",
-  "ui_interior_id": "ID interiéru",
-  "ui_current_room": "Aktuální místnost",
-  "ui_teleport": "Teleport",
-  "ui_not_in_interior": "Nejsi uvnitř žádného interiéru",
-  "ui_no_last_location": "Neteleportoval ses ještě na žádnou lokaci",
-  "ui_current_coords": "Aktuální souřadnice",
-  "ui_set_coords": "Nastav. souřadnic",
-  "ui_save_location": "Uložit jako lokaci",
-  "ui_last_location": "Poslední lokace",
-  "ui_current_interior": "Aktuální interiér",
-  "ui_quick_actions": "Rychlé akce",
-  "ui_clean_zone": "Vyčistit oblast",
-  "ui_clean_ped": "Umýt postavu",
-  "ui_upgrade_vehicle": "Vylepšit vozidlo",
-  "ui_repair_vehicle": "Opravit vozidlo",
-  "ui_delete_vehicle": "Smazat vozidlo",
-  "ui_set_sunny_day": "Nast. slunečno",
-  "ui_spawn_vehicle": "Spawnout vozidlo",
-  "ui_max_health": "Max. zdraví",
-  "ui_time_freeze": "Zastavit čas",
-  "ui_time_not_freeze": "Pustit čas",
-  "ui_time": "Čas",
-  "ui_sync": "Synchr.",
-  "ui_freeze_time": "Zastavit čas",
-  "ui_weather": "Počasí",
-  "ui_choose_weather": "Vyber typ počasí",
-  "ui_current_weather": "Aktuální počasí?",
-  "ui_freeze_weather": "Zmrazit počasí",
-  "ui_interior": "Interiér",
-  "ui_room_count": "Počet roomů",
-  "ui_portal_count": "Počet portálů",
-  "ui_portals": "Portály",
-  "ui_infos": "Info",
-  "ui_fill_portals": "Výplň portálů",
-  "ui_outline_portals": "Ohraničení portálů",
-  "ui_corcers_portals": "Rohy portálů",
-  "ui_flag": "Flagy",
-  "ui_room_from": "Room from",
-  "ui_room_to": "Room to",
-  "ui_index": "Index",
-  "ui_timecycle": "Timecycle",
-  "ui_no_timecycle_found": "Nenalezen žádný timecycle",
-  "ui_object_spawner": "Spawn objektů",
-  "ui_locations": "Lokace",
-  "ui_snap_to_ground": "Přychicení k zemi",
-  "ui_duplicate": "Duplikovat",
-  "ui_no_location_found": "Žádná lokace nenalezena",
-  "ui_goto": "Teleport k",
-  "ui_show_custom_locations": "Zobrazit vlastní lokace",
-  "ui_show_vanilla_locations": "Zobrazit původní (vanilla) lokace",
-  "ui_create_custom_location": "Vytvořit vlastní lokaci",
-  "ui_search": "Hledat",
-  "ui_rename": "Přejmenovat",
-  "ui_delete": "Smazat",
-  "ui_vanilla": "Vanilla",
-  "ui_custom": "Vlastní",
-  "ui_peds": "Postavy",
-  "ui_no_ped_found": "Postava nenalezena",
-  "ui_set_by_name": "Spawnout podle názvu",
-  "ui_set_ped": "Potvrdit",
-  "ui_vehicles": "Vozidla",
-  "ui_spawn": "Spawnout",
-  "ui_spawn_by_name": "Spawnout podle názvu",
-  "ui_no_vehicle_found": "Vozidlo nenalezeno",
-  "ui_weapons": "Zbraně",
-  "ui_give_weapon_by_name": "Spawnout podle názvu",
-  "ui_give_weapon": "Získat",
-  "ui_no_weapon_found": "Zbraň nenalezena",
-  "ui_set_coords_as_string": "Nastavení souřadnic textem",
-  "ui_set_coords_separate": "Nastavení souřadnic hodnotou",
-  "ui_confirm": "Potvrdit",
-  "ui_cancel": "Zrušit",
-  "ui_location_name": "Název lokace",
-  "ui_create_location_description": "Uloží tvou lokaci (souřadnice a jméno)",
-  "ui_add_entity": "Přidat nový objekt",
-  "ui_add_entity_description": "Zadej jméno přidávaného objektu",
-  "ui_delete_all_entities": "Smazat všechny spawnuté objekty?",
-  "ui_amount": "Množství",
-  "ui_portal_flag_1": "Vypnout render exteriéru",
-  "ui_portal_flag_2": "Vypnout render interiéru",
-  "ui_portal_flag_4": "Odrazy (zrcadlo)",
-  "ui_portal_flag_8": "Extra bloom",
-  "ui_portal_flag_16": "Unknown 16",
-  "ui_portal_flag_32": "Použít LOD exteriéru",
-  "ui_portal_flag_64": "Skrýt, když jsou zavřené dveře.",
-  "ui_portal_flag_128": "Unknown 128",
-  "ui_portal_flag_256": "Odrazy exteriérových portálů",
-  "ui_portal_flag_512": "Unknown 512",
-  "ui_portal_flag_1024": "Odrazy objektů v limbu",
-  "ui_portal_flag_2048": "Unknown 2048",
-  "ui_portal_flag_4096": "Unknown 4096",
-  "ui_portal_flag_8192": "Vypnout farclipping",
-  "ui_update_warning": "Aktualizace k dispozici!",
-  "ui_github": "Otevřít GitHub repozitář",
-  "ui_discord": "Otevřít Dolu Discord",
-  "ui_audio": "Audio",
-  "ui_static_emitters": "Static Emitters",
-  "ui_draw_static_emitters": "Show static emitters",
-  "ui_draw_distance": "Draw Distance",
-  "ui_closest_emitter_info": "Closest Emitter Info",
-  "ui_refresh": "Refresh",
-  "ui_distance": "Distance",
-  "ui_meters": "meters",
-  "ui_flags": "Flags",
-  "ui_room": "Room",
-  "ui_radio_station": "Radio Station"
+    "cannot_goback": "Nenalezena žádná poslední lokace. Musíš se nejdříve někde teleportovat.",
+    "no_marker": "Neoznačil jsi žádné místo",
+    "command_tpm": "%s Teleport na označené místo",
+    "command_noclip": "%s Přepnout noclip",
+    "command_openui": "%s Otevřít Dolu Tool",
+    "command_weather_notfound": "Pokus o nastavení neplatného typu počasí: %s",
+    "teleport_invalid_coords": "Pokus o teleport hráče na neplatný typ souřadnic",
+    "model_doesnt_exist": "Model %s neexistuje",
+    "copied_coords_clipboard": "Souřadnice zkopírovány do schránky",
+    "press_escape_exit": "Zmáčkni 'Escape' pro ukončení 'edit' módu",
+    "custom_location_created": "Vlastní lokace úspěšně vytvořena",
+    "vehicle_upgraded": "Vozidlo úspěšně vylepšeno!",
+    "weapon_gave": "Obdržel jsi zbraň",
+    "weapon_cant_carry": "Nelze obdržet tuto zbraň",
+    "max_health_set": "Maximální zdraví úspěšně nastaveno",
+    "entity_cant_be_loaded": "Tato entita nemůže být načtena...",
+    "entity_doesnt_exist": "Entita neexistuje",
+    "entity_deleted": "Entita úspěšně smazána",
+    "teleport_success": "Úspěšně teleportován. Použij /goback pro teleport na poslední lokaci",
+    "ui_home": "Domů",
+    "ui_world": "Svět",
+    "ui_exit": "Ukončit",
+    "ui_copy_coords": "Zkopír. souřadnice",
+    "ui_copied_coords": "Souřadnice zkopírovány",
+    "ui_copy_name": "Zkopír. název",
+    "ui_copied_name": "Název zkopírován",
+    "ui_copy_hash": "Zkopír. hash",
+    "ui_copied_hash": "Hash zkopírován",
+    "ui_name": "Název",
+    "ui_hash": "Hash",
+    "ui_coords": "Souřadnice",
+    "ui_heading": "Hlavička",
+    "ui_interior_id": "ID interiéru",
+    "ui_current_room": "Aktuální místnost",
+    "ui_teleport": "Teleport",
+    "ui_not_in_interior": "Nejsi uvnitř žádného interiéru",
+    "ui_no_last_location": "Neteleportoval ses ještě na žádnou lokaci",
+    "ui_current_coords": "Aktuální souřadnice",
+    "ui_set_coords": "Nastav. souřadnic",
+    "ui_save_location": "Uložit jako lokaci",
+    "ui_last_location": "Poslední lokace",
+    "ui_current_interior": "Aktuální interiér",
+    "ui_quick_actions": "Rychlé akce",
+    "ui_clean_zone": "Vyčistit oblast",
+    "ui_clean_ped": "Umýt postavu",
+    "ui_upgrade_vehicle": "Vylepšit vozidlo",
+    "ui_repair_vehicle": "Opravit vozidlo",
+    "ui_delete_vehicle": "Smazat vozidlo",
+    "ui_set_sunny_day": "Nast. slunečno",
+    "ui_spawn_vehicle": "Spawnout vozidlo",
+    "ui_max_health": "Max. zdraví",
+    "ui_time_freeze": "Zastavit čas",
+    "ui_time_not_freeze": "Pustit čas",
+    "ui_time": "Čas",
+    "ui_sync": "Synchr.",
+    "ui_freeze_time": "Zastavit čas",
+    "ui_weather": "Počasí",
+    "ui_choose_weather": "Vyber typ počasí",
+    "ui_current_weather": "Aktuální počasí?",
+    "ui_freeze_weather": "Zmrazit počasí",
+    "ui_interior": "Interiér",
+    "ui_room_count": "Počet roomů",
+    "ui_portal_count": "Počet portálů",
+    "ui_portals": "Portály",
+    "ui_infos": "Info",
+    "ui_fill_portals": "Výplň portálů",
+    "ui_outline_portals": "Ohraničení portálů",
+    "ui_corcers_portals": "Rohy portálů",
+    "ui_flag": "Flagy",
+    "ui_room_from": "Room from",
+    "ui_room_to": "Room to",
+    "ui_index": "Index",
+    "ui_timecycle": "Timecycle",
+    "ui_no_timecycle_found": "Nenalezen žádný timecycle",
+    "ui_object_spawner": "Spawn objektů",
+    "ui_locations": "Lokace",
+    "ui_snap_to_ground": "Přychicení k zemi",
+    "ui_duplicate": "Duplikovat",
+    "ui_no_location_found": "Žádná lokace nenalezena",
+    "ui_goto": "Teleport k",
+    "ui_show_custom_locations": "Zobrazit vlastní lokace",
+    "ui_show_vanilla_locations": "Zobrazit původní (vanilla) lokace",
+    "ui_create_custom_location": "Vytvořit vlastní lokaci",
+    "ui_search": "Hledat",
+    "ui_rename": "Přejmenovat",
+    "ui_delete": "Smazat",
+    "ui_vanilla": "Vanilla",
+    "ui_custom": "Vlastní",
+    "ui_peds": "Postavy",
+    "ui_no_ped_found": "Postava nenalezena",
+    "ui_set_by_name": "Spawnout podle názvu",
+    "ui_set_ped": "Potvrdit",
+    "ui_vehicles": "Vozidla",
+    "ui_spawn": "Spawnout",
+    "ui_spawn_by_name": "Spawnout podle názvu",
+    "ui_no_vehicle_found": "Vozidlo nenalezeno",
+    "ui_weapons": "Zbraně",
+    "ui_give_weapon_by_name": "Spawnout podle názvu",
+    "ui_give_weapon": "Získat",
+    "ui_no_weapon_found": "Zbraň nenalezena",
+    "ui_set_coords_as_string": "Nastavení souřadnic textem",
+    "ui_set_coords_separate": "Nastavení souřadnic hodnotou",
+    "ui_confirm": "Potvrdit",
+    "ui_cancel": "Zrušit",
+    "ui_location_name": "Název lokace",
+    "ui_create_location_description": "Uloží tvou lokaci (souřadnice a jméno)",
+    "ui_add_entity": "Přidat nový objekt",
+    "ui_add_entity_description": "Zadej jméno přidávaného objektu",
+    "ui_delete_all_entities": "Smazat všechny spawnuté objekty?",
+    "ui_amount": "Množství",
+    "ui_portal_flag_1": "Vypnout render exteriéru",
+    "ui_portal_flag_2": "Vypnout render interiéru",
+    "ui_portal_flag_4": "Odrazy (zrcadlo)",
+    "ui_portal_flag_8": "Extra bloom",
+    "ui_portal_flag_16": "Unknown 16",
+    "ui_portal_flag_32": "Použít LOD exteriéru",
+    "ui_portal_flag_64": "Skrýt, když jsou zavřené dveře.",
+    "ui_portal_flag_128": "Unknown 128",
+    "ui_portal_flag_256": "Odrazy exteriérových portálů",
+    "ui_portal_flag_512": "Unknown 512",
+    "ui_portal_flag_1024": "Odrazy objektů v limbu",
+    "ui_portal_flag_2048": "Unknown 2048",
+    "ui_portal_flag_4096": "Unknown 4096",
+    "ui_portal_flag_8192": "Vypnout farclipping",
+    "ui_update_warning": "Aktualizace k dispozici!",
+    "ui_github": "Otevřít GitHub repozitář",
+    "ui_discord": "Otevřít Dolu Discord",
+    "ui_audio": "Zvuky/audio",
+    "ui_static_emitters": "Statická vyzařování",
+    "ui_draw_static_emitters": "Zobrazit statická vyzařování",
+    "ui_draw_distance": "Vykreslovací vzdálenost",
+    "ui_closest_emitter_info": "Info nejbližšího vyzařování",
+    "ui_refresh": "Obnovit",
+    "ui_distance": "vzdálenost",
+    "ui_meters": "metrů",
+    "ui_flags": "Flagy",
+    "ui_room": "Room",
+    "ui_radio_station": "Rádiová stanice"
 }
