--- a/locales/th.json
+++ b/locales/th.json
@@ -8,6 +8,7 @@
   "teleport_invalid_coords": "ไม่สามารถวาร์ไปที่พิกัดที่กำหนดได้",
   "model_doesnt_exist": "กำหนดโมเดล %s ไม่ได้",
   "copied_coords_clipboard": "คัดลอกตำแหน่งพิกัดเรียบร้อย",
+  "copied_model_clipboard": "Model hash copied to clipboard",
   "press_escape_exit": "กด 'Escape' เพื่อออกจากโหมดแก้ไข",
   "custom_location_created": "ได้สร้างพิกัดกำหนดเองเรียบร้อยแล้ว",
   "vehicle_upgraded": "ได้อัพเกรดยานพาหนะเรียบร้อยแล้ว",
