Copy Rotation added.

--- a/locales/en.json
+++ b/locales/en.json
@@ -137,5 +137,7 @@
   "ui_meters": "meters",
   "ui_flags": "Flags",
   "ui_room": "Room",
-  "ui_radio_station": "Radio Station"
+  "ui_radio_station": "Radio Station",
+  "ui_copied_rotation": "Copy rotations",
+  "ui_copy_rotation": "Copied rotations"
 }
