--- a/locales/th.json
+++ b/locales/th.json
@@ -137,5 +137,7 @@
   "ui_meters": "เมตร",
   "ui_flags": "แฟลก",
   "ui_room": "รูม",
-  "ui_radio_station": "สถานีวิทยุ"
+  "ui_radio_station": "สถานีวิทยุ",
+  "ui_copied_rotation": "Copy rotations",
+  "ui_copy_rotation": "Copied rotations"
 }
